<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.infolabsolution.databasemoviejar.FavoriteMoviesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_marginTop="5dp">

            <ImageView
                android:id="@+id/ivFavorites"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:paddingLeft="5dp" />

            <TextView
                android:id="@+id/tvFavoritesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/ivFavorites"
                android:textSize="20sp"
                tools:text="@string/movie_title" />

            <TextView
                android:id="@+id/tvFavoritesRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvFavoritesTitle"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/ivFavorites"
                android:textSize="16sp"
                tools:text="@string/movie_rating" />

            <TextView
                android:id="@+id/tvFavoritesRelease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvFavoritesRating"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/ivFavorites"
                android:textSize="16sp"
                tools:text="@string/movie_release_date" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvFavoritesOverview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="16sp"
            tools:text="@string/movie_overview" />

    </LinearLayout>

</layout>
